[package]
name = "goto"
version = "0.1.0"
edition = "2024"

[dependencies]
fontdue = "0.9.3"
nsvg = "0.5.1"
tiny-skia = "0.11.4"
x11rb = { version = "0.13.2", features = [
    "render",
    "resource_manager",
    "xinput",
] }
xkbcommon = { version = "0.9.0", default-features = false, features = ["x11"] }
